docs: update migration navigation bar

--- a/modules/ROOT/pages/migration/migration-5_1.adoc
+++ b/modules/ROOT/pages/migration/migration-5_1.adoc
@@ -1,12 +1,10 @@
 [[connector-migration]]
-= Connector Migration
-
-== 5.0.x => {connector-version} migration guide
+= 5.0.x => 5.1 Migration Guide
 
 When upgrading to the new {connector-version} {product-name} be aware that many of the configuration properties have been changed and updated.
 Please take special care to ensure the new configuration logically matches the previous configuration.
 
-Firstly, read over xref:whats-new.adoc[] to familiarise yourself with the recent changes.
+Firstly, read over xref:whats-new.adoc[] to get familiarised with the recent changes.
 
 For generic Kafka Connect plugin upgrade documentation see: https://docs.confluent.io/platform/current/connect/upgrade.html[Confluent Documentation -> Upgrade a Connector Plugin]
 
