--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -25,8 +25,8 @@
 * xref:sink/error-handling.adoc[Error handling]
 * xref:sink/configuration.adoc[Settings]
 
-* *Migration*
-* xref::migration/migration-overview.adoc[Overview]
+* *Upgrades and Migrations*
+* xref::migration/migration-5_1.adoc[5.1 Migration]
 ** xref::migration/migration-docker.adoc[Confluent Platform]
 ** xref::migration/migration-confluent-cloud.adoc[Confluent Cloud]
 
