docs: update wording
Co-authored-by: Nicola Vitucci <nicola.vitucci@gmail.com>

--- a/modules/ROOT/pages/migration/migration-docker.adoc
+++ b/modules/ROOT/pages/migration/migration-docker.adoc
@@ -1,11 +1,11 @@
 [[migration-docker]]
 = Confluent Cloud
 
-This guide follows the connector xref:quickstart-docker.adoc[] docker execution method.
+This guide follows the xref:quickstart-docker.adoc[].
 
 .Steps
-. Go to Confluent Control Center instance at `http://localhost:9021/clusters` and find the registered connector.
-Once found delete the source/sink connector.
+. Open the Confluent Control Center instance at `http://localhost:9021/clusters` and find the registered source or sink connector.
+Once found, delete it.
 
 . Look at the logs for the `connect` container (`docker-compose logs -f connect`).
 As part of the connector deletion/shutdown a migrated configuration will be printed to the logs.
@@ -16,18 +16,18 @@ Example:
 include::example$docker-data/how-to-upgrade.migrated-config.log[]
 ----
 
-. Create a new `JSON` file `(source/sink)_migrated.neo4j.json` and copy the migrated example config to this file along with the connector name.
-.. The configuration should contain a `name` property and the migrated configuration should be nested in the `config` key.
+. Create a new JSON file `(source/sink)_migrated.neo4j.json` and copy the migrated example config to this file along with the connector name.
+The configuration should contain a `name` property and the migrated configuration should be nested in the `config` key.
 
 include::partial$how-to-upgrade-validate-config.adoc[]
 
 . Download the new connector version following the xref:installation.adoc[] guide and remove the original 5.0.x connector version.
-.. The new plugin should be copied into the `./plugins/` folder created during the docker setup
+Make sure to copy the new plugin into the `./plugins/` folder created during the Docker setup.
 
 . Restart the Kafka Connect Worker by running `docker-compose restart connect`.
-This allows the new plugin to picked up by the Kafka Connect platform reading from the `./plugins/` folder.
+This allows the Kafka Connect platform to pick up the new plugin from the `./plugins/` folder.
 
-. Using the new configuration continue following the xref:quickstart-docker.adoc[] guide to deploy the plugin to Kafka Connect.
+. Continue following the xref:quickstart-docker.adoc[] to deploy the plugin to Kafka Connect with the new configuration.
 
 . Once the connector is up and running, validate it is successfully running.
 
