--- a/modules/ROOT/pages/migration/migration-confluent-cloud.adoc
+++ b/modules/ROOT/pages/migration/migration-confluent-cloud.adoc
@@ -3,28 +3,25 @@
 
 include::partial$third-party.adoc[]
 
-IMPORTANT: Please complete the following steps in full for each connector (source or sink) currently registered.
+IMPORTANT: Complete the following steps in full for each connector (source or sink) currently registered.
 
 This guide follows the connector xref:quickstart-confluent-cloud.adoc[] execution method.
 
 .Steps
 
 . Access the Confluent Cloud cluster associated with the relevant connectors.
-. Open the `Connectors` section and find the relevant source or sink connector for upgrading
-. Go to the `Settings` section, click the pause button for the connector.
-+
-image::migration/confluent-cloud-pause.png[]
-. Go to the `Logs` section, locate or search for a log message starting with `The migrated settings for 5.1 version of Neo4j`.
+. Open the *Connectors* section and find the relevant source or sink connector for upgrading.
+. Open the *Settings* section and select *Pause* to pause the connector.
+. Open the `Logs` section and search for a log message starting with `The migrated settings for 5.1 version of Neo4j`.
 +
 image::migration/confluent-cloud-config-log.png[width=800]
 
-. Save this printed configuration locally
+. Copy the configuration shown in the log into a local file.
 
 include::partial$how-to-upgrade-validate-config.adoc[]
 
-. Follow the xref:quickstart-confluent-cloud.adoc[] tutorial to upload the new 5.1 Connector plugin
-. Create a Source or Sink instance
-. Using the new migrated configuration copy it into the Custom Configuration JSON section.
-.. Verify this configuration is correct
-. Continue with the steps in the Quickstart guide
+. Follow the xref:quickstart-confluent-cloud.adoc[] to upload the new 5.1 Connector plugin.
+. Create a Source or Sink instance.
+. Copy the migrated configuration from the local file into the Custom Configuration JSON section, and check that it is correct.
+. Continue with the steps in the Quickstart guide.
 . Once the connector is up and running, validate it is successfully running.
