--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -26,9 +26,9 @@
 * xref:sink/configuration.adoc[Settings]
 
 * *Upgrades and Migrations*
-* xref::migration/migration-5_1.adoc[5.1 Migration]
-** xref::migration/migration-docker.adoc[Confluent Platform]
-** xref::migration/migration-confluent-cloud.adoc[Confluent Cloud]
+* xref:migration/5.1/migration-5_1.adoc[5.1 Migration]
+** xref:migration/5.1/migration-docker.adoc[Confluent Platform]
+** xref:migration/5.1/migration-confluent-cloud.adoc[Confluent Cloud]
 
 * *Reference*
 * xref::known-issues.adoc[]
