--- a/modules/ROOT/pages/migration/5.1/migration-5_1.adoc
+++ b/modules/ROOT/pages/migration/5.1/migration-5_1.adoc
@@ -1,32 +1,27 @@
 [[connector-migration]]
-= 5.0.x => 5.1 Migration Guide
+= Migrate from 5.0.x to 5.1
 
-When upgrading to the new {connector-version} {product-name} be aware that many of the configuration properties have been changed and updated.
-Please take special care to ensure the new configuration logically matches the previous configuration.
+When upgrading the {product-name} to 5.1, be aware that many of the configuration properties have been changed and updated.
+Read over xref:whats-new.adoc[] to familiarize with the recent changes, and make sure that the new configuration logically matches the previous configuration.
 
-Firstly, read over xref:whats-new.adoc[] to get familiarised with the recent changes.
-
-For generic Kafka Connect plugin upgrade documentation see: https://docs.confluent.io/platform/current/connect/upgrade.html[Confluent Documentation -> Upgrade a Connector Plugin]
+For generic Kafka Connect plugin upgrade documentation see: https://docs.confluent.io/platform/current/connect/upgrade.html[Confluent Documentation -> Upgrade a Connector Plugin].
 
 == Deployment guides
 
-Depending on how the Plugin is deployed follow the relevant guide:
+Follow the relevant instructions to configure and deploy the new connector.
 
-xref:migration/5.1/migration-docker.adoc[Confluent Platform Migration]::
-Deployed to Confluent Platform as a self-managed connector
-xref:migration/5.1/migration-confluent-cloud.adoc[Confluent Cloud Migration]::
-Deployed as a Custom Connector on Confluent Cloud
+* Read the xref:migration/5.1/migration-docker.adoc[Confluent Platform migration] for a connector deployed to Confluent Platform as a self-managed connector.
+* Read the xref:migration/5.1/migration-confluent-cloud.adoc[Confluent Cloud migration] for a connector deployed as a Custom Connector on Confluent Cloud.
 
 == Troubleshooting
 
 [qanda]
 Failing to connect to Neo4j instance?::
-The configuration migration login does not migrate the password of the Neo4j instance or other sensitive properties.
-These options need to be re-entered. Once updated re-run the connector.
+The configuration migration process does not migrate the password of the Neo4j instance or other sensitive properties.
+You need to enter these properties again.
+Once updated, restart the connector.
 
 Unexpected error::
 Looking at the logs of Kafka Connect may reveal other errors in configuration.
-. Confluent Cloud
-.. Logs are accessible through the `Logs` section on the Connector run page
-. Confluent Platform
-.. Logs are accessible through docker commands `docker-compose logs -f connect`
+. On Confluent Cloud, the logs are accessible through the *Logs* section on the Connector run page.
+. On Confluent Platform, the logs are accessible through the Docker command `docker-compose logs -f connect`.
