--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -26,7 +26,7 @@
 * xref:sink/configuration.adoc[Settings]
 
 * *Upgrades and migrations*
-* xref:migration/5.1/migration-5_1.adoc[5.1 Migration]
+* xref:migration/5.1/index.adoc[Migrate to 5.1]
 ** xref:migration/5.1/migration-docker.adoc[Confluent Platform]
 ** xref:migration/5.1/migration-confluent-cloud.adoc[Confluent Cloud]
 
