docs: add 5.1 migration guide (#53)
* docs: add confluent platform migration guide

* docs: add sensitive properties section to migration

* docs: add confluent cloud migration guide

* docs: add migration to content nav

* docs: move migration to reference section

* docs: refactor migration into separate section and split into deployments

* docs: use defined variables for version and product name

* docs: update migration navigation bar

* docs: update wording

Co-authored-by: Nicola Vitucci <nicola.vitucci@gmail.com>

* docs: move files into 5.1 specification section

* docs: fix example indentation

* Apply suggestions from code review

Co-authored-by: Nicola Vitucci <nicola.vitucci@gmail.com>

* docs: update navigation title

---------

Co-authored-by: Ali Ince <ali-ince@users.noreply.github.com>
Co-authored-by: Nicola Vitucci <nicola.vitucci@gmail.com>

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -25,6 +25,11 @@
 * xref:sink/error-handling.adoc[Error handling]
 * xref:sink/configuration.adoc[Settings]
 
+* *Upgrades and migrations*
+* xref:migration/5.1/index.adoc[Migrate to 5.1]
+** xref:migration/5.1/migration-docker.adoc[Confluent Platform]
+** xref:migration/5.1/migration-confluent-cloud.adoc[Confluent Cloud]
+
 * *Reference*
 * xref::known-issues.adoc[]
 * xref::changelog.adoc[]
