--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -2,6 +2,22 @@
 
 This page lists changes to the {product-name}.
 
+== Version 5.1.3
+
+=== New and updated features
+
+[cols="2",options="header"]
+|===
+| Feature
+| Details
+
+a|
+label:bug[]
+label:fixed[]
+
+Fixes a bug where messages read by the Sink connector which do not have valid constraints result in not processing the message.
+a| Resolves an issue where messages created from the `5.0` Source connector, handled by the `5.1` Sink connector, which include constraints which do not exist in the target Sink database produce a cypher query containing null property values. Depending on the operation type (`UPDATE/DELETE/CREATE`) this can cause unexpected behaviour as the query may not match the intended nodes.
+|===
 == Version 5.1.2
 
 === New and updated features
