--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -2,6 +2,23 @@
 
 This page lists changes to the {product-name}.
 
+== Version 5.1.3
+
+=== New and updated features
+
+[cols="2",options="header"]
+|===
+| Feature
+| Details
+
+a|
+label:bug[]
+label:fixed[]
+
+Fixed a bug in the Sink connector where messages without valid constraints would not be processed.
+a| Resolved an issue where messages created from the `neo4j-streams` 4.1 source plugin, which include unique constraints without a corresponding value in the entity, result in a Cypher query containing null property filters to match on.
+Depending on the operation type (`UPDATE/DELETE/CREATE`), this can cause unexpected behavior as the query may not match the intended nodes.
+|===
 == Version 5.1.2
 
 === New and updated features
