--- a/modules/ROOT/pages/source/configuration.adoc
+++ b/modules/ROOT/pages/source/configuration.adoc
@@ -35,6 +35,10 @@ Default: `false`
 
 Default: `1000`
 
+| neo4j.payload-mode
+| Defines the structure of change messages. One of `COMPACT`, `EXTENDED`. `COMPACT` provides simpler messages but may face schema compatibility issues if property types change. `EXTENDED` includes type information to avoid such issues.
+
+Default: `EXTENDED`.
 |===
 
 == CDC Strategy Settings
