--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -2,6 +2,10 @@
 
 This page lists changes to the {product-name}.
 
+== Version 5.1.7
+
+This is a maintenance release which provides updated dependencies.
+
 == Version 5.1.6
 
 This is a maintenance release which provides updated dependencies.
