--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -35,7 +35,7 @@ label:bug[]
 label:fixed[]
 
 User provided Cypher queries that return results were failing in cypher sink strategy.
-| When a sink connector is configured with cypher strategy and the provided query included `RETURN` clause, the internally re-written Cypher query was not being generated correctly and connector ended up failing.
+| When a sink connector is configured with the Cypher strategy and the provided query included a `RETURN` clause, the internally re-written Cypher query was not being generated correctly and the connector ended up failing.
 The Cypher generation logic is now fixed and these type of queries can also be specified.
 |===
 
