--- a/modules/ROOT/pages/source/query.adoc
+++ b/modules/ROOT/pages/source/query.adoc
@@ -53,17 +53,6 @@ include::example$docker-data/source.query.json.json[]
 ----
 =====
 
-[.include-with-JSON-messages-as-string]
-=====
-ifdef::backend-pdf[]
-.source.query.json-string.json
-endif::[]
-[source,json]
-----
-include::example$docker-data/source.query.json-string.json[]
-----
-=====
-
 [.include-with-PROTOBUF-messages]
 =====
 ifdef::backend-pdf[]
@@ -72,6 +61,28 @@ endif::[]
 [source,json]
 ----
 include::example$docker-data/source.query.protobuf.json[]
+----
+=====
+
+[.include-with-JSON-messages-with-embedded-schema]
+=====
+ifdef::backend-pdf[]
+.source.query.json-schema.json
+endif::[]
+[source,json]
+----
+include::example$docker-data/source.query.json-schema.json[]
+----
+=====
+
+[.include-with-JSON-messages-as-string]
+=====
+ifdef::backend-pdf[]
+.source.query.json-string.json
+endif::[]
+[source,json]
+----
+include::example$docker-data/source.query.json-string.json[]
 ----
 =====
 
