docs: add changelog entry

--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -2,6 +2,19 @@
 
 This page lists changes to the {product-name}.
 
+== Version 5.1.13
+
+[cols="1,2", options="header"]
+|===
+| Feature | Details
+
+a|
+label:bug[]
+label:fixed[]
+
+Introduce `neo4j.query.force-maps-as-struct`
+| For the source query strategy in `COMPACT` mode, users can now disable this and encode the schema of maps with homogeneous value types as maps, not structs.
+|===
 == Version 5.1.12
 
 This is a maintenance release which provides updated dependencies.
