--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -13,7 +13,7 @@ label:bug[]
 label:fixed[]
 
 Introduce `neo4j.query.force-maps-as-struct`
-| For the source query strategy in `COMPACT` mode, users can now disable this and encode the schema of maps with homogeneous value types as maps, not structs.
+| For the source query strategy, users can now disable this and encode the schema of maps with homogeneous value types as maps, not structs.
 |===
 == Version 5.1.12
 
