--- a/modules/ROOT/pages/source/configuration.adoc
+++ b/modules/ROOT/pages/source/configuration.adoc
@@ -147,4 +147,10 @@ Default: `1s`
 | Maximum amount of time query is allowed to run (valid units are: `ms`, `s`, `m`, `h` and `d`; default unit is `s`).
 
 Default: `0s`
+
+| neo4j.query.force-maps-as-struct
+| This forces the schema encoding of map values to be structs (default: `true`).
+Setting the value to `false` will only affect the schema encoding of maps with homogeneous value types.
+Maps with heterogeneous value types will remain encoded as structs.
+Note that the Protobuf converter does not support map message types (map message types can happen in the `COMPACT` payload mode and when this parameter is set to `false`).
 |===
